--- a/templates/home.html
+++ b/templates/home.html
@@ -287,8 +287,8 @@
 
 
 
-    <div class="site-blocks-cover" style="background-image: url(images/hero_bg_2.jpg);"
-      data-aos="fade" data-stellar-background-ratio="0.5">
+    <div class="site-blocks-cover" style="background-image: url(images/hero_bg_2.jpg);" data-aos="fade"
+      data-stellar-background-ratio="0.5">
       <div class="container">
         <div class="row align-items-center">
           <!-- <div class="col-md-7">
@@ -463,7 +463,6 @@
 
 
 
-
     <div id="appointment-form" class="site-section site-block-appointment">
       <div class="container">
         <div class="row">
@@ -578,7 +577,7 @@
                   <input type="text" id="lname" class="form-control" placeholder="Last Name">
                 </div>
               </div>
-            
+
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
                   <label class="font-weight-bold" for="gender">Gender*</label>
@@ -587,32 +586,32 @@
                 <div class="col-md-6">
                   <label class="font-weight-bold" for="age">Age*</label>
                   <input type="text" id="age" class="form-control" placeholder="Age">
-                </div>                
+                </div>
               </div>
-                          
+
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
-                    <label class="font-weight-bold" for="date">Date*</label>
-                    <input type="text" id="date" class="form-control datepicker px-2" placeholder="Date of visit">
+                  <label class="font-weight-bold" for="date">Date*</label>
+                  <input type="text" id="date" class="form-control datepicker px-2" placeholder="Date of visit">
                 </div>
                 <div class="col-md-6">
                   <label class="font-weight-bold" for="time">Time Slot*</label>
                   <select id="time" name="time" class="form-control" required>
-                      <option value="" disabled selected>Select a time slot</option>
-                      <option value="10:30 AM">10:30 AM</option>
-                      <option value="11:15 AM">11:15 AM</option>
-                      <option value="12:00 PM">12:00 PM</option>
-                      <option value="12:45 PM">12:45 PM</option>
-                      <option value="01:30 PM">01:30 PM</option>
-                      <option value="02:15 PM">02:15 PM</option>
-                      <option value="03:00 PM">03:00 PM</option>
-                      <option value="03:45 PM">03:45 PM</option>
-                      <option value="04:30 PM">04:30 PM</option>
-                      <option value="05:15 PM">05:15 PM</option>
-                      <option value="06:00 PM">06:00 PM</option>
-                  </select>                  
+                    <option value="" disabled selected>Select a time slot</option>
+                    <option value="10:30 AM">10:30 AM</option>
+                    <option value="11:15 AM">11:15 AM</option>
+                    <option value="12:00 PM">12:00 PM</option>
+                    <option value="12:45 PM">12:45 PM</option>
+                    <option value="01:30 PM">01:30 PM</option>
+                    <option value="02:15 PM">02:15 PM</option>
+                    <option value="03:00 PM">03:00 PM</option>
+                    <option value="03:45 PM">03:45 PM</option>
+                    <option value="04:30 PM">04:30 PM</option>
+                    <option value="05:15 PM">05:15 PM</option>
+                    <option value="06:00 PM">06:00 PM</option>
+                  </select>
                 </div>
-              </div>                           
+              </div>
 
               <div class="row form-group">
                 <div class="col-md-6 mb-3 mb-md-0">
@@ -622,12 +621,12 @@
                 <div class="col-md-6">
                   <label class="font-weight-bold" for="email">Email</label>
                   <input type="email" id="email" class="form-control" placeholder="Email">
-                </div>             
+                </div>
               </div>
-            
-              <div class="row form-group">                
-                <div class="col-md-12">                  
-                  <label class="font-weight-bold" for="treatment">Treatment Needed</label> 
+
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <label class="font-weight-bold" for="treatment">Treatment Needed</label>
                   <select name="treatment" id="treatment" class="form-control">
                     <option value="" disabled selected>Select a treatment</option>
                     <option value="">Apicectomy</option>
@@ -676,14 +675,15 @@
                     <option value="">Std.complete denture</option>
                     <option value="">Surgical extraction/wisdom tooth removal</option>
                     <option value="">Teeth Whitening</option>
-                    </select>                  
+                  </select>
                 </div>
               </div>
-            
+
               <div class="row form-group">
                 <div class="col-md-12">
                   <label class="font-weight-bold" for="note">Notes</label>
-                  <textarea name="note" id="note" cols="30" rows="5" class="form-control" placeholder="Write your notes or questions here..."></textarea>
+                  <textarea name="note" id="note" cols="30" rows="5" class="form-control"
+                    placeholder="Write your notes or questions here..."></textarea>
                 </div>
               </div>
               <div style="display: none;">
@@ -743,15 +743,6 @@
       </div>
     </div>
 
-    <!-- <div class="promo py-5 bg-primary">
-      <div class="container text-center">
-        <span class="d-block h4 mb-3 font-weight-light text-white">Promo For Tooth Cleaning from <del>₹140.00</del> now <strong class="font-weight-bold">₹50.00</strong></span>
-        <div id="date-countdown" class="mt-0"></div>
-      </div>
-    </div> -->
-
-
-    <!-- <div class="site-section bg-light"> -->
     <div class="site-section">
       <div class="container">
         <div class="row mb-5 justify-content-center">
@@ -841,16 +832,6 @@
       </div>
     </div>
 
-    <!-- <div class="promo py-5" style="background-color: #ece8d9;">
-  <div class="row mb-5 justify-content-center">
-    <div class="col-md-12 text-center">
-      <h2 class="site-heading text-black mb-5">Happy <strong>Customers</strong></h2>
-    </div>
-  </div>
-  <div>
-    <script defer async src='https://cdn.trustindex.io/loader.js?117521930e3325425b46ae862b7'></script>
-  </div>
-</div> -->
 
     <div style="text-align: center; margin-bottom: 20px;">
       <button onclick="openGoogleMaps();" class="btn btn-primary">
