Update URLs in meta.html for new domain

--- a/docs/_includes/meta.html
+++ b/docs/_includes/meta.html
@@ -3,13 +3,13 @@
       "@context": "https://schema.org",
       "@type": "Dentist",
       "name": "Shree Kalyan Dental Care Hospital",
-      "image": "https://www.shreekalyandentalcare.com/static/website/images/dentist_favicon_1.jpg",
-      "@id": "https://www.shreekalyandentalcare.com/",
-      "url": "https://www.shreekalyandentalcare.com/",
+      "image": "https://www.shreekalyandentalcare.in/static/website/images/dentist_favicon_1.jpg",
+      "@id": "https://www.shreekalyandentalcare.in/",
+      "url": "https://www.shreekalyandentalcare.in/",
       "telephone": "+917067278733",
       "address": {
         "@type": "PostalAddress",
-        "@id": "https://www.shreekalyandentalcare.com/address",
+        "@id": "https://www.shreekalyandentalcare.in/address",
         "streetAddress": "SHOP NO.44, RDA Complex, in front of Sumeet Bazar, Priyadarshini Nagar Colony, Gurumukh Singh Nagar, Tikrapara",
         "addressLocality": "Raipur",
         "addressRegion": "Chhattisgarh",
